# zAI-Skills

./: .gitignore  LICENSE  README.md  skills
.claude-plugin/: marketplace.json  plugin.json
AI-Toolkit/cpp-reinforcement-learning/: SKILL.md
career-coach/: .mcp.json
career-coach/.claude-plugin/: marketplace.json  plugin.json
career-coach/agents/: career-director.md  interview-prep.md  job-search.md
career-coach/commands/: cover-letter.md
consulting-toolkit/: README.md
consulting-toolkit/.claude-plugin/: plugin.json
consulting-toolkit/agents/: deck-builder.md  due-diligence.md  engagement-manager.md  financial-modeler.md  research-analyst.md
consulting-toolkit/commands/: benchmark.md  business-case.md  company-profile.md  competitive-landscape.md  exec-summary.md  hypothesis.md  issue-tree.md  market-size.md  raci.md  risk-log.md  size-the-prize.md  so-what.md  steerco-update.md  storyline.md  workplan.md
deep-learning/references/: basics.md  generative_dl.md  keras3_changes.md  keras_working.md  nlp_transformers.md
deep-learning/scripts/: quick_train.py
docs/plans/: 2026-02-12-skill-forge-webapp-design.md
projects/stock_predictor/: README.md  pyproject.toml
projects/stock_predictor/src/stock_predictor/: __init__.py  evaluate.py  main.py  model.py
real-estate-investment/.claude-plugin/: marketplace.json  plugin.json
real-estate-investment/agents/: deal-analyzer.md  (+3 more)
skills/: README.md
stock_predictor/: data.py  evaluate.py  requirements.txt  train.py
tests/: __init__.py  test_data.py  test_evaluate.py  test_model.py  test_train.py
(+79 files in other folders)
